--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -1,7 +1,7 @@
 <h1 id="die-datenlaube-der-gartenlaube">Die Datenlaube der Gartenlaube</h1>
 <p>Mit Wikidata ‚Die Gartenlaube‘ in Wikisource strukturiert erschließen – ein Werkstattbericht</p>
-<p><em>Christian Erlinger (</em><a href="https://www.wikidata.org/wiki/Q67173261"><em>Q67173261</em></a><em>)</em></p>
-<p><em>Jens Bemme (</em><a href="https://www.wikidata.org/wiki/Q56880673"><em>Q56880673</em></a><em>)</em></p>
+<p><em>Christian Erlinger (</em><a href="https://www.wikidata.org/wiki/Q67173261"><em>Q67173261</em></a><em>)</em><br/>
+<em>Jens Bemme (</em><a href="https://www.wikidata.org/wiki/Q56880673"><em>Q56880673</em></a><em>)</em></p>
 
 <p>Eines der umfangreichsten Projekte der deutschsprachigen <a href="https://de.wikisource.org/">Wikisource</a> Community ist die Bearbeitung und Tiefenerschließung des ersten großen deutschsprachigen Illustrierten „<a href="https://de.wikisource.org/wiki/Die_Gartenlaube">Die Gartenlaube</a>‟. </p>
 
