--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -13,7 +13,7 @@
 
 <figure>
 <img src="./Pictures/10000201000000F50000025BBC6E3BEF99879393.png" style="width:6.482cm;height:15.954cm" alt="" /><figcaption><br />
-Abbildung 1: Infobox des Gartenlaubeartikels "Im Hopfenparadiese"</figcaption>
+Abbildung 1: Infobox des Gartenlaubeartikels <a href="https://de.wikisource.org/wiki/Der_Volkspalast_im_Ostend_von_London">"Der Volkspalast im Ostend von London."</a></figcaption>
 </figure>
 
 <figure>
