--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -113,7 +113,7 @@ Abbildung 2: Frontend des „ältesten‟ Wikidata-Items des Gartenlaube-Artikel
 </tr>
 <tr class="even">
 <td>label_[Multiple_Languages]</td>
-<td>Titel des Artikels in weiteren Sprachen – Tendentiell im Original, gegebenenfalls transliteriert.</td>
+<td>Titel des Artikels in weiteren Sprachen – Tendenziell im Original, gegebenenfalls transliteriert.</td>
 <td>Jean Paul Richter </td>
 </tr>
 <tr class="odd">
@@ -148,7 +148,7 @@ Abbildung 2: Frontend des „ältesten‟ Wikidata-Items des Gartenlaube-Artikel
 </tr>
 <tr class="odd">
 <td>[wikiproject]_sitelink</td>
-<td>Sitelinks zu weiteren Wiki*Projekten (zB Wikipedia-Link zum Werk)</td>
+<td>Sitelinks zu weiteren Wiki*Projekten (z.B. Wikipedia-Link zum Werk)</td>
 <td><a href="https://de.wikisource.org/wiki/Jean_Paul_Richter"></a></td>
 </tr>
 </tbody>
@@ -158,7 +158,7 @@ Abbildung 2: Frontend des „ältesten‟ Wikidata-Items des Gartenlaube-Artikel
 </div>
 <p>Die Verknüpfung und Erschließung von Wikisource mittels Wikidata in Projekten mit historischen Texten (unabhängig davon, ob es sich um selbständige oder unselbständige Literatur handelt) ist ein erster Schritt. Darauf aufbauend kann weiteres Augenmerk auf ein drittes Wikiprojekt gelegt werden, ohne das es die Volltexterschließung auf Wikisource so nicht möglich wäre: Wikimedia Commons. Auf <a href="https://commons.wikimedia.org/">Commons</a> sind sämtliche für Wikisourceprojekte notwendigen Quelldaten gespeichert, die rohen Scans der Einzelseiten sowie extrahierte und bearbeitete Illustrationen. Insbesondere durch die Etablierung von <a href="https://commons.wikimedia.org/wiki/Commons:Structured_data/"><em>Structured Data On Commons</em></a> – der Einbindung von Linked Data nach dem Vorbild und unter Einbeziehung von Wikidata – ergeben sich hier seit dem Frühjahr 2019 neue und vor allem langfristig sehr nützlich erscheinende Beziehung.<a href="#fn4" class="footnote-ref" id="fnref4" role="doc-noteref"><sup>4</sup></a> In Wikidata erzeugte bibliographische Items können nun in den Commons als stabiler Link bzw. Fundstelle für die jeweils in den Zeitungsartikeln vorhandenen Illustrationen oder Seitenscans verwendet werden. Das Nachweissystem für die Scans als Quelldokumente der folgenden Artikeltranskriptionen würde damit noch stabiler.</p>
 <h2 id="anzahl-und-qualität-der-artikel-items-in-wikidata-beim-projektstart-2019">Anzahl und Qualität der Artikel-Items in Wikidata beim Projektstart 2019</h2>
-<p>Per 1. März 2019 hatten 7.599 Artikel der Gartenlaube ein verlinktes Item in Wikidata. Eine SPARQL-Abfrage nach Artikeln mit dem Statement „published in‟ „Die Gartenlaube‟ ist aber mit den Daten des damaligen Zeitpunktes nicht möglich, da den vorhandenen Items als Veröffentlichungsort nicht die Zeitschrift selbst, sondern ein Jahrgangs-Item (zB. „<a href="https://www.wikidata.org/wiki/Q19175246">Gartenlaube 1878</a>‟) als Fundstelle eingetragen wurde. Der Wert an bereits vorhandenen Wikidata-Items der Gartenlaube errechnet sich aus der gegenwärtig verfügbaren Liste aller Wikidata-Items unter nummerischer Auswertung der Q-ID der Wikidata-Items<a href="#fn5" class="footnote-ref" id="fnref5" role="doc-noteref"><sup>5</sup></a> um auf ein enstprechend frühes Anlagedatum des Items zu schließen (Konkret handelt es sich dabei um alle Gartenlaube-Items mit einer ID kleiner Q50000000)<a href="#fn6" class="footnote-ref" id="fnref6" role="doc-noteref"><sup>6</sup></a></p>
+<p>Per 1. März 2019 hatten 7.599 Artikel der Gartenlaube ein verlinktes Item in Wikidata. Eine SPARQL-Abfrage nach Artikeln mit dem Statement „published in‟ „Die Gartenlaube‟ ist aber mit den Daten des damaligen Zeitpunktes nicht möglich, da den vorhandenen Items als Veröffentlichungsort nicht die Zeitschrift selbst, sondern ein Jahrgangs-Item (z.B. „<a href="https://www.wikidata.org/wiki/Q19175246">Gartenlaube 1878</a>‟) als Fundstelle eingetragen wurde. Der Wert an bereits vorhandenen Wikidata-Items der Gartenlaube errechnet sich aus der gegenwärtig verfügbaren Liste aller Wikidata-Items unter nummerischer Auswertung der Q-ID der Wikidata-Items<a href="#fn5" class="footnote-ref" id="fnref5" role="doc-noteref"><sup>5</sup></a> um auf ein enstprechend frühes Anlagedatum des Items zu schließen (Konkret handelt es sich dabei um alle Gartenlaube-Items mit einer ID kleiner Q50000000)<a href="#fn6" class="footnote-ref" id="fnref6" role="doc-noteref"><sup>6</sup></a></p>
 
 
 <figure>
@@ -245,7 +245,7 @@ Abbildung 4: Verteilung der Anzahl an Items je Anzahl an Statements der Garetnla
 <p>Zur Extraktion sämtlicher Artikelmetadaten der Gartenlaube wurde ein Python Skript in einem Jupyter Notebook entwickelt (Ablaufplan vgl. ) und auf der Mediawiki Jupyter Plattform <a href="https://www.mediawiki.org/wiki/PAWS">PAWS</a> eingesetzt. </p>
 
 <ul>
-<li>Das verwendete <a href="../ParseWikiSource_ByCategories__GartenlaubeArtikelParser.ipynb">Skript</a> durchläuft auf Basis der Antwort der Mediawiki-API die Oberkategorie ( <a href="https://de.wikisource.org/wiki/Kategorie:Die_Gartenlaube_Artikel">Kategorie:Die_Gartenlaube_Artikel</a>) zur Identifizierung der einzelnen Jahrgänge und holt im weiteren Schritt den Mediawiki-Text jedes einzelnen Artikels ab. </li>
+<li>Das verwendete <a href="../ParseWikiSource_ByCategories__GartenlaubeArtikelParser.ipynb">Skript</a> durchläuft auf Basis der Antwort der Mediawiki-API die Oberkategorie (<a href="https://de.wikisource.org/wiki/Kategorie:Die_Gartenlaube_Artikel">Kategorie:Die_Gartenlaube_Artikel</a>) zur Identifizierung der einzelnen Jahrgänge und holt im weiteren Schritt den Mediawiki-Text jedes einzelnen Artikels ab. </li>
 <li><p>Mit RegularExpressions werden die einzelnen Parameter der Textbox auf der Seite extrahiert:</p>
 <ul>
 <li>Titel</li>
