--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -158,7 +158,7 @@ Abbildung 2: Frontend des „ältesten‟ Wikidata-Items des Gartenlaube-Artikel
 </div>
 <p>Die Verknüpfung und Erschließung von Wikisource mittels Wikidata in Projekten mit historischen Texten (unabhängig davon, ob es sich um selbständige oder unselbständige Literatur handelt) ist ein erster Schritt. Darauf aufbauend kann weiteres Augenmerk auf ein drittes Wikiprojekt gelegt werden, ohne das es die Volltexterschließung auf Wikisource so nicht möglich wäre: Wikimedia Commons. Auf <a href="https://commons.wikimedia.org/">Commons</a> sind sämtliche für Wikisourceprojekte notwendigen Quelldaten gespeichert, die rohen Scans der Einzelseiten sowie extrahierte und bearbeitete Illustrationen. Insbesondere durch die Etablierung von <a href="https://commons.wikimedia.org/wiki/Commons:Structured_data/"><em>Structured Data On Commons</em></a> – der Einbindung von Linked Data nach dem Vorbild und unter Einbeziehung von Wikidata – ergeben sich hier seit dem Frühjahr 2019 neue und vor allem langfristig sehr nützlich erscheinende Beziehung.<a href="#fn4" class="footnote-ref" id="fnref4" role="doc-noteref"><sup>4</sup></a> In Wikidata erzeugte bibliographische Items können nun in den Commons als stabiler Link bzw. Fundstelle für die jeweils in den Zeitungsartikeln vorhandenen Illustrationen oder Seitenscans verwendet werden. Das Nachweissystem für die Scans als Quelldokumente der folgenden Artikeltranskriptionen würde damit noch stabiler.</p>
 <h2 id="anzahl-und-qualität-der-artikel-items-in-wikidata-beim-projektstart-2019">Anzahl und Qualität der Artikel-Items in Wikidata beim Projektstart 2019</h2>
-<p>Per 1. März 2019 hatten 7.599 Artikel der Gartenlaube ein verlinktes Item in Wikidata. Eine SPARQL-Abfrage nach Artikeln mit dem Statement „published in‟ „Die Gartenlaube‟ ist aber mit den Daten des damaligen Zeitpunktes nicht möglich, da den vorhandenen Items als Veröffentlichungsort nicht die Zeitschrift selbst, sondern ein Jahrgangs-Item (z.B. „<a href="https://www.wikidata.org/wiki/Q19175246">Gartenlaube 1878</a>‟) als Fundstelle eingetragen wurde. Der Wert an bereits vorhandenen Wikidata-Items der Gartenlaube errechnet sich aus der gegenwärtig verfügbaren Liste aller Wikidata-Items unter nummerischer Auswertung der Q-ID der Wikidata-Items<a href="#fn5" class="footnote-ref" id="fnref5" role="doc-noteref"><sup>5</sup></a> um auf ein enstprechend frühes Anlagedatum des Items zu schließen (Konkret handelt es sich dabei um alle Gartenlaube-Items mit einer ID kleiner Q50000000)<a href="#fn6" class="footnote-ref" id="fnref6" role="doc-noteref"><sup>6</sup></a></p>
+<p>Per 1. März 2019 hatten 7.599 Artikel der Gartenlaube ein verlinktes Item in Wikidata. Eine SPARQL-Abfrage nach Artikeln mit dem Statement „published in‟ „Die Gartenlaube‟ ist aber mit den Daten des damaligen Zeitpunktes nicht möglich, da den vorhandenen Items als Veröffentlichungsort nicht die Zeitschrift selbst, sondern ein Jahrgangs-Item (z.B. „<a href="https://www.wikidata.org/wiki/Q19175246">Gartenlaube 1878</a>‟) als Fundstelle eingetragen wurde. Der Wert an bereits vorhandenen Wikidata-Items der Gartenlaube errechnet sich aus der gegenwärtig verfügbaren Liste aller Wikidata-Items unter nummerischer Auswertung der Q-ID der Wikidata-Items<a href="#fn5" class="footnote-ref" id="fnref5" role="doc-noteref"><sup>5</sup></a> um auf ein enstprechend frühes Anlagedatum des Items zu schließen (Konkret handelt es sich dabei um alle Gartenlaube-Items mit einer ID kleiner Q50000000).<a href="#fn6" class="footnote-ref" id="fnref6" role="doc-noteref"><sup>6</sup></a></p>
 
 
 <figure>
@@ -166,7 +166,7 @@ Abbildung 2: Frontend des „ältesten‟ Wikidata-Items des Gartenlaube-Artikel
 Abbildung 3: Status des „ältesten‟ Wikidata-Items des Gartenlaube-Artikels „Der Volkspalast im Ostend von London‟ (<a href="https://www.wikidata.org/wiki/Q15892076">Q15892076</a>) nach seiner Anlage am 05.03.2014</figcaption>
 </figure>
 
-<p>Der Großteil dieser mehr als 7.000 Items war hinsichtlich der bibliographischen Beschreibung eher dürftig, da es sich dabei um eine semi-automatische Anlage mittels des Tools <a href="https://petscan.wmflabs.org/">PetScan</a> oder automatisiert per Bot handelte, bei der auf Basis der jeweiligen Jahrgangskategorie in Wikisource Wikidata-Items nur rudimentär angelegt wurden. (wie für das ältestes Gartenlaube-Item in gezeigt).</p>
+<p>Der Großteil dieser mehr als 7.000 Items war hinsichtlich der bibliographischen Beschreibung eher dürftig, da es sich dabei um eine semi-automatische Anlage mittels des Tools <a href="https://petscan.wmflabs.org/">PetScan</a> oder automatisiert per Bot handelte, bei der auf Basis der jeweiligen Jahrgangskategorie in Wikisource Wikidata-Items nur rudimentär angelegt wurden (wie für das ältestes Gartenlaube-Item in gezeigt).</p>
 <figure>
 <img src="./Pictures/100002010000059C000004335DEB63C25E419F99.png" style="width:17cm;height:12.053cm" alt="" /><figcaption><br />
 Abbildung 4: Verteilung der Anzahl an Items je Anzahl an Statements der Garetnlaube Artikel</figcaption>
@@ -256,8 +256,8 @@ Abbildung 4: Verteilung der Anzahl an Items je Anzahl an Statements der Garetnla
 <li>Autor</li>
 <li>Wikipedia-Link</li>
 </ul></li>
-<li>Die Werte im Feld Autor können hierbei reine Textstrings sein oder auch Wiki-Links zu Autorenseiten in der Wikisource. In letzterem Fall ist es daher auch möglich eine Wikidata-ID für einen Autor zu gewinnen. Dafür muss über den vorhandenen Link der Wikisource-Autorenpage eine Mediawiki-API-Abfrage nach der QID gestartet werden. </li>
-<li>Der Wikipedia-Link stellt eine inhaltliche Klassifizierung des Artikels dar. Über die Mediawiki-Abfrage lässt sich die QID zur Verwendung als Schlagwort im Wikidata-Item auslesen. </li>
+<li>Die Werte im Feld Autor können hierbei reine Textstrings sein oder auch Wiki-Links zu den Autorenseiten in der Wikisource. In letzterem Fall ist es daher auch möglich eine Wikidata-ID für einen Autor zu gewinnen. Dafür muss über den vorhandenen Link der Wikisource-Autorenpage eine Mediawiki-API-Abfrage nach der QID gestartet werden.</li>
+<li>Der Wikipedia-Link stellt eine inhaltliche Klassifizierung des Artikels dar. Über die Mediawiki-Abfrage lässt sich die QID zur Verwendung als Schlagwort im Wikidata-Item auslesen.</li>
 <li>Abschließend werden die je Artikel vorhandenen Daten in einen Satz an <a href="https://tools.wmflabs.org/quickstatements/#/">QuickStatements</a><a href="#fn9" class="footnote-ref" id="fnref9" role="doc-noteref"><sup>9</sup></a>-Befehlen umgewandelt, um den Import der Daten zu ermöglichen.</li>
 </ul>
 
@@ -278,12 +278,12 @@ Abbildung 5: Ablaufplan des Python-Skripts zur Extraktion der Metadaten in der W
 </ul>
 
 
-<h2 id="ausblicke">Ausblicke</h2>
-<p><a href="https://twitter.com/search?q=%23DieDatenlaube&amp;src=typed_query">#DieDatenlaube</a> versteht sich als ein fortlaufendes Begleitprojekt des Wikisource-Projektes für <em>Die Gartenlaube</em>. Die systematische und strukturierte Beschreibung der zahlreichen Artikel der Zeitschrift in Wikidata war Ausgangspunkt und bleibt weiterhin eine Kernaufgabe, die laufend um neue „Baustellen‟ ergänzt wird wie beispielsweise:</p>
+<h2 id="ausblicke">Ausblick</h2>
+<p><a href="https://twitter.com/search?q=%23DieDatenlaube&amp;src=typed_query">#DieDatenlaube</a> versteht sich als ein fortlaufendes Begleitprojekt des Wikisource-Projektes für die Transkription und OCR-Korrektur von <em>Die Gartenlaube</em> der Jahrgänge 1853 bis 1899). Die systematische und strukturierte Beschreibung der Artikel der Zeitschrift in Wikidata war Ausgangspunkt und bleibt weiterhin eine Kernaufgabe, die laufend um neue „Baustellen‟ ergänzt wird wie beispielsweise:</p>
 <ul>
 <li>Fortführung der inhaltlichen Erschließung der Artikel<a href="#fn11" class="footnote-ref" id="fnref11" role="doc-noteref"><sup>11</sup></a></li>
 <li>Identifizierung von fiktionalen Artikeln und generell die Zuordnung zu einer Literaturgattung. (zB Gedichte, Erzählungen aber auch Biographien, Reisebericht etc.)</li>
-<li>Verbesserung der Nachweise bei Artikeln die über mehrere Hefte hinweg erschienen sind (aber in Wikisource als [sinnvolle] Einheit dargestellt sind)</li>
+<li>Verbesserung der Nachweise bei Artikeln die über mehrere Hefte hinweg erschienen sind (aber in Wikisource als [sinnvolle] Einheit dargestellt werden)</li>
 <li>Verlinkung der Zusammenhänge von Artikelserien (<em>part of series</em>, <em>has part</em>)</li>
 <li>Verlinkung und Verstärkung des Zusammenspiels mit Wikimedia-Commons (zB. Nachweis der biblioraphischen Fundstelle bei Illustrationen)</li>
 <li>Entwicklung neuer Fragestellungen für weitere Auswertungen mit Wikidata-Abfragen und Visualisierungen des Datenbestandes</li>
