--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -102,7 +102,7 @@ Abbildung 2: Frontend des „ältesten‟ Wikidata-Items des Gartenlaube-Artikel
 <p>Tabelle 1: Basis-Metadatenmodell für Gartenlaube-Artikel in Wikidata<a href="#fn3" class="footnote-ref" id="fnref3" role="doc-noteref"><sup>3</sup></a></p>
 </div>
 
-<p>Die Flexibilität und Offenheit des Datenmodells in Wikidata erlaubt es für die spezifischen Items weitere Statements zu ergänzen, wie beispielhaft in angeführt. Dies wäre bspw. die Ergänzung und Verlinkung von Illustrationen, der Nennung eines Illustrators, sofern auffindbar Links in Bibliothekskataloge zu den entsprechenden lokalen bibliographischen Fundstellen oder schlicht was sonst noch denkbar und möglich erscheint oder dereinst – durch Erzeugung neuer Wikidata-Properties für formale und inhaltliche Erschließung – möglich sein wird.</p>
+<p>Die Flexibilität und Offenheit des Datenmodells in Wikidata insgesamt erlaubt es für die spezifischen Items weitere Statements zu ergänzen, wie beispielhaft in angeführt. Dies wäre bspw. die Ergänzung und Verlinkung von Illustrationen, der Nennung eines Illustrators, sofern auffindbar Links in Bibliothekskataloge zu den entsprechenden lokalen bibliographischen Fundstellen oder schlicht was sonst noch denkbar und möglich erscheint oder dereinst – durch Erzeugung neuer Wikidata-Properties für formale und inhaltliche Erschließung – möglich sein wird.</p>
 
 <table>
 <tbody>
@@ -156,7 +156,7 @@ Abbildung 2: Frontend des „ältesten‟ Wikidata-Items des Gartenlaube-Artikel
 <div class="caption">
 <p>Tabelle 2: Beispiele weiterer [optionaler] Eigenschaften eines bibliographischen Items der Gartenlaube</p>
 </div>
-<p>Die Verknüpfung und Erschließung von Wikisource mittels Wikidata in Projekten mit historischen Texten (unabhängig davon, ob es sich um selbständige oder unselbständige Literatur handelt) ist ein erster Schritt. Darauf aufbauend kann weiteres Augenmerk auf ein drittes Wikiprojekt gelegt werden, ohne das es die Volltexterschließung auf Wikisource so nicht möglich wäre: Wikimedia Commons. Auf <a href="https://commons.wikimedia.org/">Commons</a> sind sämtliche für Wikisourceprojekte notwendigen Quelldaten gespeichert, die rohen Scans der Einzelseiten sowie extrahierte und bearbeitete Illustrationen. Insbesondere durch die Etablierung von <a href="https://commons.wikimedia.org/wiki/Commons:Structured_data/"><em>Structured Data On Commons</em></a> – der Einbindung von Linked Data nach dem Vorbild und unter Einbeziehung von Wikidata – ergeben sich hier seit dem Frühjahr 2019 neue und vor allem langfristig sehr nützlich erscheinende Beziehung.<a href="#fn4" class="footnote-ref" id="fnref4" role="doc-noteref"><sup>4</sup></a> In Wikidata erzeugte bibliographische Items können nun in den Commons als stabiler Link bzw. Fundstelle für die jeweils in den Zeitungsartikeln vorhandenen Illustrationen oder Seitenscans verwendet werden. Das Nachweissystem für die Scans als Quelldokumente der folgenden Artikeltranskriptionen würde damit noch stabiler.</p>
+<p>Die Verknüpfung und Erschließung von Wikisource mittels Wikidata in Projekten mit historischen Texten (unabhängig davon, ob es sich um selbständige oder unselbständige Literatur handelt) ist ein erster Schritt. Darauf aufbauend kann weiteres Augenmerk auf ein drittes Wikimediaportal gelegt werden, ohne das es die Volltexterschließung auf Wikisource so nicht möglich wäre: Wikimedia Commons. Auf <a href="https://commons.wikimedia.org/">Commons</a> sind sämtliche für Wikisourceprojekte notwendigen Quelldaten gespeichert, die rohen Scans der Einzelseiten sowie extrahierte und bearbeitete Illustrationen. Insbesondere durch die Etablierung von <a href="https://commons.wikimedia.org/wiki/Commons:Structured_data/"><em>Structured Data On Commons</em></a> – der Einbindung von Linked Data nach dem Vorbild und unter Einbeziehung von Wikidata – ergeben sich hier seit dem Frühjahr 2019 neue und vor allem langfristig sehr nützlich erscheinende Beziehung.<a href="#fn4" class="footnote-ref" id="fnref4" role="doc-noteref"><sup>4</sup></a> In Wikidata erzeugte bibliographische Items können nun in den Commons als stabiler Link bzw. Fundstelle für die jeweils in den Zeitungsartikeln vorhandenen Illustrationen oder Seitenscans verwendet werden. Das Nachweissystem für die Scans als Quelldokumente der folgenden Artikeltranskriptionen würde damit noch stabiler.</p>
 <h2 id="anzahl-und-qualität-der-artikel-items-in-wikidata-beim-projektstart-2019">Anzahl und Qualität der Artikel-Items in Wikidata beim Projektstart 2019</h2>
 <p>Per 1. März 2019 hatten 7.599 Artikel der Gartenlaube ein verlinktes Item in Wikidata. Eine SPARQL-Abfrage nach Artikeln mit dem Statement „published in‟ „Die Gartenlaube‟ ist aber mit den Daten des damaligen Zeitpunktes nicht möglich, da den vorhandenen Items als Veröffentlichungsort nicht die Zeitschrift selbst, sondern ein Jahrgangs-Item (z.B. „<a href="https://www.wikidata.org/wiki/Q19175246">Gartenlaube 1878</a>‟) als Fundstelle eingetragen wurde. Der Wert an bereits vorhandenen Wikidata-Items der Gartenlaube errechnet sich aus der gegenwärtig verfügbaren Liste aller Wikidata-Items unter nummerischer Auswertung der Q-ID der Wikidata-Items<a href="#fn5" class="footnote-ref" id="fnref5" role="doc-noteref"><sup>5</sup></a> um auf ein enstprechend frühes Anlagedatum des Items zu schließen (Konkret handelt es sich dabei um alle Gartenlaube-Items mit einer ID kleiner Q50000000).<a href="#fn6" class="footnote-ref" id="fnref6" role="doc-noteref"><sup>6</sup></a></p>
 
@@ -169,8 +169,9 @@ Abbildung 3: Status des „ältesten‟ Wikidata-Items des Gartenlaube-Artikels 
 <p>Der Großteil dieser mehr als 7.000 Items war hinsichtlich der bibliographischen Beschreibung eher dürftig, da es sich dabei um eine semi-automatische Anlage mittels des Tools <a href="https://petscan.wmflabs.org/">PetScan</a> oder automatisiert per Bot handelte, bei der auf Basis der jeweiligen Jahrgangskategorie in Wikisource Wikidata-Items nur rudimentär angelegt wurden (wie für das ältestes Gartenlaube-Item in gezeigt).</p>
 <figure>
 <img src="./Pictures/100002010000059C000004335DEB63C25E419F99.png" style="width:17cm;height:12.053cm" alt="" /><figcaption><br />
-Abbildung 4: Verteilung der Anzahl an Items je Anzahl an Statements der Garetnlaube Artikel</figcaption>
+Abbildung 4: Verteilung der Anzahl an Items je Anzahl an Statements der Gartenlaube Artikel</figcaption>
 </figure>
+
 
 <p>Die zum Zeitpunkt 9. März 2019 vorhandenen Items hatten im Schnitt zwei Statements.<a href="#fn7" class="footnote-ref" id="fnref7" role="doc-noteref"><sup>7</sup></a> Die beiden am häufigst eingesetzten Properties waren dabei P31 (<em>„instance of‟</em>) und P1433 (<em>„published in‟</em>) wie der zu entnehmen. Wie aus ersichtlich hatten 6.516 Items weniger oder gleich zwei Statements. Bei Items mit einer sehr hohen Anzahl an Statements wie allen jenen mit mehr als 20 Statements lohnte sich der genaue Blick auf das Item, da es sich hierbei dann durchwegs um falsche Zuordnungen des Wikisource-Sitelinks des Gartenlaubartikels zu einem Wikidata-Item handelte. Beispielsweise wurden biographische Artikel direkt dem biographischen Item, d.h. der Person in Wikidata zugeordnet. </p>
 
@@ -237,7 +238,7 @@ Abbildung 4: Verteilung der Anzahl an Items je Anzahl an Statements der Garetnla
 </tbody>
 </table>
 <div class="caption">
-<p>Tabelle 3: 11 häufigsten Properties mit der Anzahl ihrer Verwendung</p>
+<p>Tabelle 3: Die elf häufigsten Properties mit der Anzahl ihrer Verwendung</p>
 </div>
 <h2 id="extraktion-der-vorhandenen-metadaten-in-wikisource">Extraktion der vorhandenen Metadaten in Wikisource</h2>
 <p>Die für die Anlage bzw. das Update der bibliographischen Wikidata-Items notwendigen Informationen finden sich weitestgehend in der Infobox wie in gezeigt. In ihrer Gesamtheit abfragbar sind alle Artikel der Gartenlaube in Wikisource anhand der vergebenen Kategorien. Jeder Artikel ist einer Jahrgangskategorie (Kategorie:Die Gartenlaube (YYYY) Artikel) zugeschrieben und diese wiederum ist eine Unterkategorie der <a href="https://de.wikisource.org/wiki/Kategorie:Die_Gartenlaube_Artikel">Kategorie:Die_Gartenlaube_Artikel</a>.</p>
