--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -172,8 +172,7 @@ Abbildung 3: Status des „ältesten‟ Wikidata-Items des Gartenlaube-Artikels 
 Abbildung 4: Verteilung der Anzahl an Items je Anzahl an Statements der Gartenlaube Artikel</figcaption>
 </figure>
 
-
-<p>Die zum Zeitpunkt 9. März 2019 vorhandenen Items hatten im Schnitt zwei Statements.<a href="#fn7" class="footnote-ref" id="fnref7" role="doc-noteref"><sup>7</sup></a> Die beiden am häufigst eingesetzten Properties waren dabei P31 (<em>„instance of‟</em>) und P1433 (<em>„published in‟</em>) wie der zu entnehmen. Wie aus ersichtlich hatten 6.516 Items weniger oder gleich zwei Statements. Bei Items mit einer sehr hohen Anzahl an Statements wie allen jenen mit mehr als 20 Statements lohnte sich der genaue Blick auf das Item, da es sich hierbei dann durchwegs um falsche Zuordnungen des Wikisource-Sitelinks des Gartenlaubartikels zu einem Wikidata-Item handelte. Beispielsweise wurden biographische Artikel direkt dem biographischen Item, d.h. der Person in Wikidata zugeordnet. </p>
+<p>Die zum Zeitpunkt 9. März 2019 vorhandenen Items hatten im Schnitt zwei Statements.<a href="#fn7" class="footnote-ref" id="fnref7" role="doc-noteref"><sup>7</sup></a> Die beiden am häufigst eingesetzten Properties waren dabei P31 (<em>„instance of‟</em>) und P1433 (<em>„published in‟</em>) wie der zu entnehmen. Wie aus ersichtlich hatten 6.516 Items weniger oder gleich zwei Statements. Bei Items mit einer sehr hohen Anzahl an Statements wie allen jenen mit mehr als 20 Statements lohnte sich der genaue Blick auf das Item, da es sich hierbei dann durchwegs um falsche Zuordnungen des Wikisource-Sitelinks des Gartenlaubeartikels zu einem Wikidata-Item handelte. Beispielsweise wurden biographische Artikel direkt dem biographischen Item, d.h. der Person in Wikidata zugeordnet. </p>
 
 <p>Eine in einem Artikel beschriebene Person kann respektive soll aber immer nur als verlinktes Schlagwort (<em>„main subject‟</em>) im Artikel-Item verwendet werden. Auf Basis dieser rudimentären Analyse der vorhandenen Einträge war klar, dass nicht nur die fehlenden Items dem neuen Datenmodell gemäß anzulegen sind, sondern auch die große Zahl der bestehenden Items einer gründlichen Überarbeitung bzw. Ergänzung bedurften.<a href="#fn8" class="footnote-ref" id="fnref8" role="doc-noteref"><sup>8</sup></a></p>
 
