--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -306,3 +306,5 @@ Abbildung 5: Ablaufplan des Python-Skripts zur Extraktion der Metadaten in der W
 <li id="fn12" role="doc-endnote"><p>Vgl. HistoDigitaLE an der Universität Leipzig, <a href="https://de.wikisource.org/wiki/Wikisource:OER">https://de.wikisource.org/wiki/Wikisource:OER</a><a href="#fnref12" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
+
+<img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>&nbsp;&nbsp;&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Namensnennung 4.0 International Lizenz</a> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
