--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -165,8 +165,8 @@ Abbildung 2: Frontend des „ältesten‟ Wikidata-Items des Gartenlaube-Artikel
 <img src="./Pictures/100002010000036C00000316CE8EE444B938316A.png" style="width:17cm;height:11.92cm" alt="" /><figcaption><br />
 Abbildung 3: Status des „ältesten‟ Wikidata-Items des Gartenlaube-Artikels „Der Volkspalast im Ostend von London‟ (<a href="https://www.wikidata.org/wiki/Q15892076">Q15892076</a>) nach seiner Anlage am 05.03.2014</figcaption>
 </figure>
-
-<p>Der Großteil dieser mehr als 7.000 Items war hinsichtlich der bibliographischen Beschreibung eher dürftig, da es sich dabei um eine semi-automatische Anlage mittels des Tools <a href="https://petscan.wmflabs.org/">PetScan</a> oder automatisiert per Bot handelte, bei der auf Basis der jeweiligen Jahrgangskategorie in Wikisource Wikidata-Items nur rudimentär angelegt wurden (wie für das ältestes Gartenlaube-Item in gezeigt).</p>
+<br><br>
+<p>Der Großteil dieser mehr als 7.000 Items war hinsichtlich der bibliographischen Beschreibung eher dürftig, da es sich dabei um eine semi-automatische Anlage mittels des Tools <a href="https://petscan.wmflabs.org/">PetScan</a> oder automatisiert per Bot handelte, bei der auf Basis der jeweiligen Jahrgangskategorie in Wikisource Wikidata-Items nur rudimentär angelegt wurden (wie für das älteste Gartenlaube-Item in gezeigt).</p>
 <figure>
 <img src="./Pictures/100002010000059C000004335DEB63C25E419F99.png" style="width:17cm;height:12.053cm" alt="" /><figcaption><br />
 Abbildung 4: Verteilung der Anzahl an Items je Anzahl an Statements der Gartenlaube Artikel</figcaption>
