--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -3,7 +3,7 @@
 <p><em>Christian Erlinger (</em><a href="https://www.wikidata.org/wiki/Q67173261"><em>Q67173261</em></a><em>)</em><br/>
 <em>Jens Bemme (</em><a href="https://www.wikidata.org/wiki/Q56880673"><em>Q56880673</em></a><em>)</em></p>
 
-<p>Eines der umfangreichsten Projekte der deutschsprachigen <a href="https://de.wikisource.org/">Wikisource</a> Community ist die Bearbeitung und Tiefenerschließung des ersten großen deutschsprachigen Illustrierten „<a href="https://de.wikisource.org/wiki/Die_Gartenlaube">Die Gartenlaube</a>‟. </p>
+<p>Eines der umfangreichsten Projekte der deutschsprachigen <a href="https://de.wikisource.org/">Wikisource</a>-Community ist die Bearbeitung und Tiefenerschließung des ersten großen deutschsprachigen Illustrierten „<a href="https://de.wikisource.org/wiki/Die_Gartenlaube">Die Gartenlaube</a>‟. </p>
 
 <p>Seit Beginn des Jahres 2019 werden diese transkribierten Artikel vollständig mit Hilfe von Wikidata formal und inhaltlich erschlossen.<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a> Wikidata wird dadurch zur freien und strukturierten Bibliographie der freien Quellensammlung Wikisource. Methoden dieser teilautomatisierten bibliographischen Datenextraktion und Erschließung mit Tools in Wikidata wie <a href="https://tools.wmflabs.org/quickstatements/"><em><em>QuickStatements</em></em></a> oder <a href="https://jupyter.org/"><em><em>Jupyter Notebooks</em></em></a> sind im Folgenden dokumentiert.</p>
 
