--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -1,15 +1,15 @@
 <h1 id="die-datenlaube-der-gartenlaube">Die Datenlaube der Gartenlaube</h1>
-<p>Mit Wikidata ‚Die Gartenlaube‘ in Wikisource strukturiert erschließen – ein Werkstattbericht</p>
+<p><strong>Mit Wikidata ‚Die Gartenlaube‘ in Wikisource strukturiert erschließen – ein Werkstattbericht<strong></p>
 <p><em>Christian Erlinger (</em><a href="https://www.wikidata.org/wiki/Q67173261"><em>Q67173261</em></a><em>)</em><br/>
 <em>Jens Bemme (</em><a href="https://www.wikidata.org/wiki/Q56880673"><em>Q56880673</em></a><em>)</em></p>
 
-<p>Eines der umfangreichsten Projekte der deutschsprachigen <a href="https://de.wikisource.org/">Wikisource</a>-Community ist die Bearbeitung und Tiefenerschließung des ersten großen deutschsprachigen Illustrierten „<a href="https://de.wikisource.org/wiki/Die_Gartenlaube">Die Gartenlaube</a>‟. </p>
+<p>Eines der umfangreichsten Projekte der deutschsprachigen <a href="https://de.wikisource.org/">Wikisource</a>-Community ist die Bearbeitung und Tiefenerschließung der ersten großen deutschsprachigen Illustrierten „<a href="https://de.wikisource.org/wiki/Die_Gartenlaube">Die Gartenlaube</a>‟. </p>
 
-<p>Seit Beginn des Jahres 2019 werden diese transkribierten Artikel vollständig mit Hilfe von Wikidata formal und inhaltlich erschlossen.<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a> Wikidata wird dadurch zur freien und strukturierten Bibliographie der freien Quellensammlung Wikisource. Methoden dieser teilautomatisierten bibliographischen Datenextraktion und Erschließung mit Tools in Wikidata wie <a href="https://tools.wmflabs.org/quickstatements/"><em><em>QuickStatements</em></em></a> oder <a href="https://jupyter.org/"><em><em>Jupyter Notebooks</em></em></a> sind im Folgenden dokumentiert.</p>
+<p>Seit Beginn des Jahres 2019 werden die transkribierten Artikel dieser Zeitschrift vollständig mit Hilfe von Wikidata formal und inhaltlich erschlossen.<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a> Wikidata wird dadurch zur offenen und strukturierten Bibliographie der freien Quellensammlung Wikisource. Die Methoden dieser teilautomatisierten bibliographischen Datenextraktion und Erschließung mit verschiedenen Tools in Wikidata wie <a href="https://tools.wmflabs.org/quickstatements/"><em><em>QuickStatements</em></em></a> oder <a href="https://jupyter.org/"><em><em>Jupyter Notebooks</em></em></a> sind im Folgenden dokumentiert.</p>
 
 <p>Von geschätzt 18.500 Artikel, die ab 1853 bis zum Jahr 1900 in der Gartenlaube erschienen sind, sind per 1. November 2019 bereits 12.990 Artikel in Wikisource vorhanden – basierend auf 40.366 gescannten Seiten: gescannt, transkribiert oder auf Basis der Volltexterkennung (OCR) korrigiert.<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a></p>
 
-<p>Die Artikel in Wikisource werden allesamt mit einer für Mediawikiprojekte typischen Infobox mit grundlegenen Metadaten ausgestattet. (vgl. ) Dies umfasst in der Regel den Titel des Artikels, Quellenstelle mit Heftnummer, Seitenzahl und Publikationsjahr. Gegebenenfalls ist auch ein Kurzzusammenfassung und ein Link zu einer relevanten Wikipedia-Seite angegeben, die ggf. das Hauptthema des Textes beschreibt und somit ein zu erstes Schlagwort darstellt. Darüber hinaus beinhaltet die Infobox noch Links zu den Seitenscans sowie Informationen zum Bearbeitungsstand der Texterschließung nach den Vorgaben der Wikisource-Community. All diese in gewisser Weise „strukturierten‟ (aber nur bedingt maschinenlesbaren) Daten der Wikisource-Seite lassen sich dann in einem Wikidata-Item (vgl. ) strukturiert verankern und vor allem für Menschen wie Maschinen gleichermaßen lesbar und durchsuchbar halten.</p>
+<p>Die Artikel in Wikisource werden allesamt mit einer für Mediawikiprojekte typischen Infobox mit grundlegenen Metadaten ausgestattet. (vgl. Abb. 1) Dies umfasst in der Regel den Titel des Artikels, die Quellenstelle mit Heftnummer, Seitenzahl(en) und das Publikationsjahr. Gegebenenfalls ist auch ein Kurzzusammenfassung und ein Link zu einer relevanten Wikipedia-Seite angegeben, die ggf. das Hauptthema des Textes beschreibt und somit ein erstes Schlagwort darstellt. Darüber hinaus beinhaltet die Infobox noch Links zu den Seitenscans sowie Informationen zum Bearbeitungsstand der Texterschließung nach den Vorgaben der Wikisource-Community. All diese in gewisser Weise „strukturierten‟ (aber nur bedingt maschinenlesbaren) Daten der Wikisource-Seite lassen sich dann in einem Wikidata-Item (vgl. Abb. 2) strukturiert verankern und vor allem für Menschen wie Maschinen gleichermaßen les- und durchsuchbar halten.</p>
 
 <figure>
 <img src="./Pictures/10000201000000F50000025BBC6E3BEF99879393.png" style="width:6.482cm;height:15.954cm" alt="" /><figcaption><br />
@@ -18,19 +18,21 @@ Abbildung 1: Infobox des Gartenlaubeartikels <a href="https://de.wikisource.org/
 
 <figure>
 <img src="./Pictures/1000020100000466000003426A75ECA0964D77FF.png" style="width:17cm;height:12.591cm" alt="" /><figcaption><br />
-Abbildung 2: Frontend des „ältesten‟ Wikidata-Items des Gartenlaube-Artikels „Der Volkspalast im Ostend von London‟ (<a href="https://www.wikidata.org/w/index.php?title=Q15892076&amp;oldid=943569455">Q15892076</a> [14.11.2014]) - zeigt mehrsprachige Labels, Artikel-Statement, Bild-Verlinkung und Titel</figcaption>
+Abbildung 2: Das Frontend des „ältesten‟ Wikidata-Items eines Gartenlaube-Artikels: „Der Volkspalast im Ostend von London‟ (<a href="https://www.wikidata.org/w/index.php?title=Q15892076&amp;oldid=943569455">Q15892076</a> [14.11.2014]) zeigt mehrsprachige Labels, Artikel-Statement, Bild-Verlinkung und Titel</figcaption>
 </figure>
 
 <h2 id="datenmodell">Datenmodell</h2>
-<p>Wie in allen Portalen des Wiki*versums ist auch in Wikisource die Möglichkeit gegeben, die jeweiligen Wikisource-Pages mit einem spezifischen Datenobjekt (Item) in Wikidata zu verlinken. Im Fall der Gartenlaube bedeutet dies, dass für jeden Artikel ein Wikidata-Item als bibliographischer Datensatz angelegen wird. Ein solches Item sollte ein entsprechendes Mindestset an bibliographischen Informationen des Artikels bereithalten. Das genutzte Basis-Metadatenschma ist in der nachfolgenden dargestellt.</p>
+<p>Wie in allen Portalen des Wiki*versums ist auch in Wikisource die Möglichkeit gegeben, die jeweiligen Wikisource-Pages mit einem spezifischen Datenobjekt (Item) in Wikidata zu verlinken. Im Fall der Gartenlaube bedeutet dies, dass für jeden Artikel ein Wikidata-Item als bibliographischer Datensatz angelegen wird. Ein solches Item sollte ein entsprechendes Mindestset an bibliographischen Informationen des Artikels bereithalten. Das genutzte Basis-Metadatenschma ist in der nachfolgenden Tabelle dargestellt.</p>
 
 <table>
-<tbody>
-<tr class="odd">
-<td>Property/Wikidata-Metadatenfeld</td>
-<td>Format/Beschreibung des Inhalts</td>
-<td>Beispiel <a href="https://www.wikidata.org/wiki/Q61996511">Q61996511</a> </td>
+<thead>
+<tr>
+<th>Property/Wikidata-Metadatenfeld</th>
+<th>Format/Beschreibung des Inhalts</th>
+<th>Beispiel <a href="https://www.wikidata.org/wiki/Q61996511">Q61996511</a> </th>
 </tr>
+</thead>
+<tbody>
 <tr class="even">
 <td>label_de</td>
 <td>Titel des Artikels (Deutsch)</td>
