--- a/blogpost_20191118.md
+++ b/blogpost_20191118.md
@@ -1,5 +1,5 @@
 <h1 id="die-datenlaube-der-gartenlaube">Die Datenlaube der Gartenlaube</h1>
-<p><strong>Mit Wikidata ‚Die Gartenlaube‘ in Wikisource strukturiert erschließen – ein Werkstattbericht<strong></p>
+<p><strong>Mit Wikidata ‚Die Gartenlaube‘ in Wikisource strukturiert erschließen – ein Werkstattbericht</strong></p>
 <p><em>Christian Erlinger (</em><a href="https://www.wikidata.org/wiki/Q67173261"><em>Q67173261</em></a><em>)</em><br/>
 <em>Jens Bemme (</em><a href="https://www.wikidata.org/wiki/Q56880673"><em>Q56880673</em></a><em>)</em></p>
 
