--- a/jahr 2022.md
+++ b/jahr 2022.md
@@ -9,7 +9,15 @@ Aber untätig war die Datenlaube im zu Ende gehendenJahr 2022 aber keines falls.
 Über 2.700 Wikidata-Items wurden 2022 angelegt oder zumindest bearbeitet:
 
 <!-- https://w.wiki/6Aad -->
+```sparql
+SELECT ?artikel ?artikelLabel ?dateModified WHERE {
 
+  ?artikel wdt:P1433 wd:Q655617; schema:dateModified ?dateModified.
+  FILTER(YEAR(?dateModified)=2022)
+  SERVICE wikibase:label { bd:serviceParam wikibase:language "[AUTO_LANGUAGE],en". }
+}
+ORDER BY DESC(?dateModified)
+```
 <iframe style="width: 80vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#SELECT%20%3Fartikel%20%3FartikelLabel%20%3FdateModified%20WHERE%20%7B%0A%0A%20%20%3Fartikel%20wdt%3AP1433%20wd%3AQ655617%3B%20schema%3AdateModified%20%3FdateModified.%0A%20%20FILTER(YEAR(%3FdateModified)%3D2022)%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%7D%0AORDER%20BY%20DESC(%3FdateModified)" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
 
 ## OpenGLAM-Modul an der HdM Stuttgart
@@ -31,4 +39,5 @@ Die Schweiz kann in Sachen OpenGLAM und Wiki\*Versum was beispielsweise die Lieb
 * Alte Fragen, neue Ideen: https://de.wikiversity.org/wiki/DieDatenlaube/call4edits
 * Alte Texte, alter Post "zum "neuen Jahre": https://diedatenlaube.github.io/zum_jahreswechsel
 
-Christian Erlinger, 29. Dezember 2022
+<p>Christian Erlinger, 29. Dezember 2022</p>
+<img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />&nbsp;&nbsp;&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Namensnennung 4.0 International Lizenz</a> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><script src="https://hypothes.is/embed.js" async></script></a>
