--- a/jahr_2022.md
+++ b/jahr_2022.md
@@ -2,7 +2,7 @@
 
 Kein Blog Post im Jahr 2022? Darf das sein? Kann das sein? Ja und Ja! Dieser Ort hier soll nicht verweisen, und womöglich eröffnet 2023 neue Perspektiven und Ideen, denen schriftlich auch an dieser Stelle schnell Ausdruck verliehen werden kann. 
 
-Aber untätig war die Datenlaube im zu Ende gehendenJahr 2022 aber keines falls. 
+Aber untätig war die Datenlaube im zu Ende gehenden Jahr 2022 aber keinesfalls. 
 
 ## Artikel bearbeitet in 2022
 
@@ -21,13 +21,13 @@ ORDER BY DESC(?dateModified)
 <iframe style="width: 80vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#SELECT%20%3Fartikel%20%3FartikelLabel%20%3FdateModified%20WHERE%20%7B%0A%0A%20%20%3Fartikel%20wdt%3AP1433%20wd%3AQ655617%3B%20schema%3AdateModified%20%3FdateModified.%0A%20%20FILTER(YEAR(%3FdateModified)%3D2022)%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%7D%0AORDER%20BY%20DESC(%3FdateModified)" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
 
 ## OpenGLAM-Modul an der HdM Stuttgart
-Im Sommersemester 2022 konnte eine Gruppe Studierender der HdM Stuttgart intensiv eintauchen in das Wiki\*Versum und die Datenlaube hat begleitet und moderiert: https://de.wikiversity.org/wiki/Kurs:Open_Government_und_Open_Data_(HdM_2022) - eine spannende Erfahrung und ein wertvoller Austausch.
+Im Sommersemester 2022 konnte eine Gruppe Studierender der HdM Stuttgart intensiv eintauchen in das Wiki\*Versum und die Datenlaube hat begleitet und moderiert: (https://de.wikiversity.org/wiki/Kurs:Open_Government_und_Open_Data_(HdM_2022)) - eine spannende Erfahrung und ein wertvoller Austausch.
 
 ## Publikationen, Publikationen, Publikationen
 Wenn schon nicht hier geschrieben wurde, dann doch anderer Stelle. Abgeliefert wurde, es folgen die Veröffentlichungen 2023. (#CitizenScience, \#WikiInResistance usw.) 
 
 ## Die Datenlaube - Die DDatenlaube - DatenlaubeJam goes Dresden
-Was als JourFixe von Jens Bemme und Christian Erlinger 2019/2020 begonnen hat, hat sich nun zum selben Termin (Dienstag Früh, online) zu einem Fixpunkt der Dresdner Geschichts-Community entwickelt. Das hier reger Austausch herrscht und produktives Arbeiten seinen Ausgang findet lässt sich wunderbar in den Notizen nachlesen: https://de.wikiversity.org/wiki/DieDatenlaube/Notizen
+Was als JourFixe von Jens Bemme und Christian Erlinger 2019/2020 begonnen hat, hat sich nun zum selben Termin (Dienstag Früh, online) zu einem Fixpunkt der Dresdner Geschichts-Community entwickelt. Das hier reger Austausch herrscht und produktives Arbeiten seinen Ausgang findet lässt sich wunderbar in den Notizen nachlesen: (https://de.wikiversity.org/wiki/DieDatenlaube/Notizen)
 
 ## Wikisource goes Switerland
 Die Schweiz kann in Sachen OpenGLAM und Wiki\*Versum was beispielsweise die Liebe zu Wikimedia Commons betrifft für viele andere Länder Vorbild sein. Im November durften wir der interessierten GLAM-Wiki-CH-Community einen Wikisource-Workshop geben (https://w.wiki/6Aah) und dabei auch noch 10 Jahre Wikidata feiern:
@@ -36,8 +36,8 @@ Die Schweiz kann in Sachen OpenGLAM und Wiki\*Versum was beispielsweise die Lieb
 
 ## Alles Gute für das neue Jahr 2023!
 
-* Alte Fragen, neue Ideen: https://de.wikiversity.org/wiki/DieDatenlaube/call4edits
-* Alte Texte, alter Post "zum "neuen Jahre": https://diedatenlaube.github.io/zum_jahreswechsel
+* Alte Fragen, neue Ideen: (https://de.wikiversity.org/wiki/DieDatenlaube/call4edits)
+* Alte Texte, alter Post "zum "neuen Jahre": (https://diedatenlaube.github.io/zum_jahreswechsel)
 
 <p>Christian Erlinger, 29. Dezember 2022</p>
 <img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />&nbsp;&nbsp;&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Namensnennung 4.0 International Lizenz</a> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><script src="https://hypothes.is/embed.js" async></script></a>
