--- a/jahr_2022.md
+++ b/jahr_2022.md
@@ -21,23 +21,23 @@ ORDER BY DESC(?dateModified)
 <iframe style="width: 40vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#SELECT%20%3Fartikel%20%3FartikelLabel%20%3FdateModified%20WHERE%20%7B%0A%0A%20%20%3Fartikel%20wdt%3AP1433%20wd%3AQ655617%3B%20schema%3AdateModified%20%3FdateModified.%0A%20%20FILTER(YEAR(%3FdateModified)%3D2022)%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%7D%0AORDER%20BY%20DESC(%3FdateModified)" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
 
 ## OpenGLAM-Modul an der HdM Stuttgart
-Im Sommersemester 2022 konnte eine Gruppe Studierender der HdM Stuttgart intensiv eintauchen in das Wiki\*Versum und die Datenlaube hat begleitet und moderiert: (https://de.wikiversity.org/wiki/Kurs:Open_Government_und_Open_Data_(HdM_2022)) - eine spannende Erfahrung und ein wertvoller Austausch.
+Im Sommersemester 2022 konnte eine Gruppe Studierender der HdM Stuttgart intensiv eintauchen in das Wiki\*Versum und die Datenlaube hat begleitet und moderiert: [https://de.wikiversity.org/wiki/Kurs:Open_Government_und_Open_Data_(HdM_2022)](https://de.wikiversity.org/wiki/Kurs:Open_Government_und_Open_Data_(HdM_2022)) - eine spannende Erfahrung und ein wertvoller Austausch.
 
 ## Publikationen, Publikationen, Publikationen
 Wenn schon nicht hier geschrieben wurde, dann doch anderer Stelle. Abgeliefert wurde, es folgen die Veröffentlichungen 2023. (#CitizenScience, \#WikiInResistance usw.) 
 
 ## Die Datenlaube - Die DDatenlaube - DatenlaubeJam goes Dresden
-Was als JourFixe von Jens Bemme und Christian Erlinger 2019/2020 begonnen hat, hat sich nun zum selben Termin (Dienstag Früh, online) zu einem Fixpunkt der Dresdner Geschichts-Community entwickelt. Das hier reger Austausch herrscht und produktives Arbeiten seinen Ausgang findet lässt sich wunderbar in den Notizen nachlesen: (https://de.wikiversity.org/wiki/DieDatenlaube/Notizen)
+Was als JourFixe von Jens Bemme und Christian Erlinger 2019/2020 begonnen hat, hat sich nun zum selben Termin (Dienstag Früh, online) zu einem Fixpunkt der Dresdner Geschichts-Community entwickelt. Das hier reger Austausch herrscht und produktives Arbeiten seinen Ausgang findet lässt sich wunderbar in den Notizen nachlesen: [https://de.wikiversity.org/wiki/DieDatenlaube/Notizen](https://de.wikiversity.org/wiki/DieDatenlaube/Notizen)
 
 ## Wikisource goes Switerland
-Die Schweiz kann in Sachen OpenGLAM und Wiki\*Versum was beispielsweise die Liebe zu Wikimedia Commons betrifft für viele andere Länder Vorbild sein. Im November durften wir der interessierten GLAM-Wiki-CH-Community einen Wikisource-Workshop geben (https://w.wiki/6Aah) und dabei auch noch 10 Jahre Wikidata feiern:
+Die Schweiz kann in Sachen OpenGLAM und Wiki\*Versum was beispielsweise die Liebe zu Wikimedia Commons betrifft für viele andere Länder Vorbild sein. Im November durften wir der interessierten GLAM-Wiki-CH-Community einen Wikisource-Workshop geben [https://w.wiki/6Aah](https://w.wiki/6Aah) und dabei auch noch 10 Jahre Wikidata feiern:
 
 <blockquote class="twitter-tweet"><p lang="de" dir="ltr"><a href="https://twitter.com/wikidata?ref_src=twsrc%5Etfw">@wikidata</a> ist 10 Jahre alt geworden und hat an der <a href="https://twitter.com/zhbluzern?ref_src=twsrc%5Etfw">@zhbluzern</a> dafür einen Kuchen bekommen. <a href="https://twitter.com/LibrErli?ref_src=twsrc%5Etfw">@LibrErli</a>, <a href="https://twitter.com/jeb_140?ref_src=twsrc%5Etfw">@jeb_140</a> und die ganze GLAM-Wiki-Community🇨🇭haben sogar gesungen. Allerdings wurde untersagt, Videos oder Tonaufzeichnungen davon aufzunehmen und zu posten. 😅 <a href="https://t.co/nXeD81FMBT">pic.twitter.com/nXeD81FMBT</a></p>&mdash; Benjamin Flämig (@BenjaminFlaemig) <a href="https://twitter.com/BenjaminFlaemig/status/1592948118001446914?ref_src=twsrc%5Etfw">November 16, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 ## Alles Gute für das neue Jahr 2023!
 
-* Alte Fragen, neue Ideen: (https://de.wikiversity.org/wiki/DieDatenlaube/call4edits)
-* Alte Texte, alter Post "zum "neuen Jahre": (https://diedatenlaube.github.io/zum_jahreswechsel)
+* Alte Fragen, neue Ideen: [https://de.wikiversity.org/wiki/DieDatenlaube/call4edits](https://de.wikiversity.org/wiki/DieDatenlaube/call4edits)
+* Alte Texte, alter Post "zum "neuen Jahre": [https://diedatenlaube.github.io/zum_jahreswechsel](https://diedatenlaube.github.io/zum_jahreswechsel)
 
 <p>Christian Erlinger, 29. Dezember 2022</p>
 <img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />&nbsp;&nbsp;&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Namensnennung 4.0 International Lizenz</a> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><script src="https://hypothes.is/embed.js" async></script></a>
