--- a/jahr_2022.md
+++ b/jahr_2022.md
@@ -29,7 +29,7 @@ Wenn schon nicht hier geschrieben wurde, dann doch anderer Stelle. Abgeliefert w
 ## Die Datenlaube - Die DDatenlaube - DatenlaubeJam goes Dresden
 Was als JourFixe von Jens Bemme und Christian Erlinger 2019/2020 begonnen hat, hat sich nun zum selben Termin (Dienstag Früh, online) zu einem Fixpunkt der Dresdner Geschichts-Community entwickelt. Das hier reger Austausch herrscht und produktives Arbeiten seinen Ausgang findet lässt sich wunderbar in den Notizen nachlesen: [https://de.wikiversity.org/wiki/DieDatenlaube/Notizen](https://de.wikiversity.org/wiki/DieDatenlaube/Notizen)
 
-## Wikisource goes Switerland
+## Wikisource goes Switzerland
 Die Schweiz kann in Sachen OpenGLAM und Wiki\*Versum was beispielsweise die Liebe zu Wikimedia Commons betrifft für viele andere Länder Vorbild sein. Im November durften wir der interessierten GLAM-Wiki-CH-Community einen Wikisource-Workshop geben [https://w.wiki/6Aah](https://w.wiki/6Aah) und dabei auch noch 10 Jahre Wikidata feiern:
 
 <blockquote class="twitter-tweet"><p lang="de" dir="ltr"><a href="https://twitter.com/wikidata?ref_src=twsrc%5Etfw">@wikidata</a> ist 10 Jahre alt geworden und hat an der <a href="https://twitter.com/zhbluzern?ref_src=twsrc%5Etfw">@zhbluzern</a> dafür einen Kuchen bekommen. <a href="https://twitter.com/LibrErli?ref_src=twsrc%5Etfw">@LibrErli</a>, <a href="https://twitter.com/jeb_140?ref_src=twsrc%5Etfw">@jeb_140</a> und die ganze GLAM-Wiki-Community🇨🇭haben sogar gesungen. Allerdings wurde untersagt, Videos oder Tonaufzeichnungen davon aufzunehmen und zu posten. 😅 <a href="https://t.co/nXeD81FMBT">pic.twitter.com/nXeD81FMBT</a></p>&mdash; Benjamin Flämig (@BenjaminFlaemig) <a href="https://twitter.com/BenjaminFlaemig/status/1592948118001446914?ref_src=twsrc%5Etfw">November 16, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
