--- a/jahr_2022.md
+++ b/jahr_2022.md
@@ -27,7 +27,7 @@ Im Sommersemester 2022 konnte eine Gruppe Studierender der HdM Stuttgart intensi
 Wenn schon nicht hier geschrieben wurde, dann doch anderer Stelle. Abgeliefert wurde, es folgen die Veröffentlichungen 2023. (#CitizenScience, \#WikiInResistance usw.) 
 
 ## Die Datenlaube - Die DDatenlaube - DatenlaubeJam goes Dresden
-Was als JourFixe von Jens Bemme und Christian Erlinger 2019/2020 begonnen hat, hat sich nun zum selben Termin (Dienstag Früh, online) zu einem Fixpunkt der Dresdner Geschichts-Community entwickelt. Das hier reger Austausch herrscht und produktives Arbeiten seinen Ausgang findet lässt sich wunderbar in den Notizen nachlesen: [https://de.wikiversity.org/wiki/DieDatenlaube/Notizen](https://de.wikiversity.org/wiki/DieDatenlaube/Notizen)
+Was als JourFixe von Jens Bemme und Christian Erlinger 2019/2020 begonnen hat, hat sich nun zum selben Termin (Dienstag Früh, online) zu einem Fixpunkt der Dresdner Geschichts-Community entwickelt. Dass hier reger Austausch herrscht und produktives Arbeiten seinen Ausgang findet lässt sich wunderbar in den Notizen nachlesen: [https://de.wikiversity.org/wiki/DieDatenlaube/Notizen](https://de.wikiversity.org/wiki/DieDatenlaube/Notizen)
 
 ## Wikisource goes Switzerland
 Die Schweiz kann in Sachen OpenGLAM und Wiki\*Versum was beispielsweise die Liebe zu Wikimedia Commons betrifft für viele andere Länder Vorbild sein. Im November durften wir der interessierten GLAM-Wiki-CH-Community einen Wikisource-Workshop geben [https://w.wiki/6Aah](https://w.wiki/6Aah) und dabei auch noch 10 Jahre Wikidata feiern:
@@ -37,7 +37,7 @@ Die Schweiz kann in Sachen OpenGLAM und Wiki\*Versum was beispielsweise die Lieb
 ## Alles Gute für das neue Jahr 2023!
 
 * Alte Fragen, neue Ideen: [https://de.wikiversity.org/wiki/DieDatenlaube/call4edits](https://de.wikiversity.org/wiki/DieDatenlaube/call4edits)
-* Alte Texte, alter Post "zum "neuen Jahre": [https://diedatenlaube.github.io/zum_jahreswechsel](https://diedatenlaube.github.io/zum_jahreswechsel)
+* Alte Texte, alter Post "zum neuen Jahre": [https://diedatenlaube.github.io/zum_jahreswechsel](https://diedatenlaube.github.io/zum_jahreswechsel)
 
 <p>Christian Erlinger, 29. Dezember 2022</p>
 <img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />&nbsp;&nbsp;&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Namensnennung 4.0 International Lizenz</a> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><script src="https://hypothes.is/embed.js" async></script></a>
