--- a/jahr_2023.md
+++ b/jahr_2023.md
@@ -48,6 +48,10 @@ Wir werden [2024 vielerort wählen](https://de.wikipedia.org/wiki/Wahlen_2024): 
 
 <iframe style="width: 80vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#%23title%3ADie%20Gartenlaube%20zu%20den%20Grundfesten%20unseres%20politischen%20Systems%0ASELECT%20DISTINCT%20%3Fitem%20%3FitemLabel%20%3FmainSubject%20%3FmainSubjectLabel%20WHERE%20%7B%0A%20%20%3Fitem%20wdt%3AP1433%20wd%3AQ655617%3B%0A%20%20%20%20wdt%3AP921%20%3FmainSubject.%0A%20%20VALUES%20%3Fdemocrazy%20%7B%0A%20%20%20%20wd%3AQ166747%0A%20%20%20%20wd%3AQ587404%0A%20%20%20%20wd%3AQ7174%0A%20%20%20%20wd%3AQ40231%0A%20%20%20%20wd%3AQ35749%0A%20%20%7D%0A%20%20%3FmainSubject%20(wd%3AP31%7C(wdt%3AP279*)%7C(wdt%3AP1269*))%20%3Fdemocrazy.%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%7D" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
 
+### Macro- statt Microblogging!
+
+Ohne Social-Media (TwiXer oder wie das hieß) wäre die Datenlaube nicht entstanden, dort haben sich Jens und Christian gefunden. Aber jetzt wo wir sind, sind wir groß genug, dass es [@DieDatenlaube](https://twitter.com/DieDatenlaube) *nicht* mehr braucht, lassen es bestehen wie es war. Micro-Blogging steht 2024 nicht unbedingt am Plan, dafür mehr in der längeren Form. Nehmen wir uns Zeit Themen zu präsentieren: weniger in Summe, dafür mehr im Detail. 
+
 * Alte Texte, alter Post "zum neuen Jahre": [https://diedatenlaube.github.io/zum_jahreswechsel](https://diedatenlaube.github.io/zum_jahreswechsel)
 
 <p>Christian Erlinger, 29. Dezember 2023</p>
