--- a/jahr_2023.md
+++ b/jahr_2023.md
@@ -46,6 +46,22 @@ Der Datenlaube-Kalender 2023 war und ist eine Sammlung an unterschiedlichsten Ab
 
 Wir werden [2024 vielerort wählen](https://de.wikipedia.org/wiki/Wahlen_2024): Europa, Landtage, Nationalräte: Verteidigen wir unser demokratisch-parliamentarisches System vor den autoritär-faschistischen Zugängen, wofür auch schon die Gartenlaube schrieb: [Abfrage zu Artikeln der Gartenlaube zu den Grundfesten unseres politischen Systems](https://w.wiki/8euk)
 
+```sparql
+#title:Die Gartenlaube zu den Grundfesten unseres politischen Systems
+SELECT DISTINCT ?item ?itemLabel ?mainSubject ?mainSubjectLabel WHERE {
+  ?item wdt:P1433 wd:Q655617;
+    wdt:P921 ?mainSubject.
+  VALUES ?democrazy {
+    wd:Q166747
+    wd:Q587404
+    wd:Q7174
+    wd:Q40231
+    wd:Q35749
+  }
+  ?mainSubject (wd:P31|(wdt:P279*)|(wdt:P1269*)) ?democrazy.
+  SERVICE wikibase:label { bd:serviceParam wikibase:language "[AUTO_LANGUAGE],en". }
+}
+```
 <iframe style="width: 40vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#%23title%3ADie%20Gartenlaube%20zu%20den%20Grundfesten%20unseres%20politischen%20Systems%0ASELECT%20DISTINCT%20%3Fitem%20%3FitemLabel%20%3FmainSubject%20%3FmainSubjectLabel%20WHERE%20%7B%0A%20%20%3Fitem%20wdt%3AP1433%20wd%3AQ655617%3B%0A%20%20%20%20wdt%3AP921%20%3FmainSubject.%0A%20%20VALUES%20%3Fdemocrazy%20%7B%0A%20%20%20%20wd%3AQ166747%0A%20%20%20%20wd%3AQ587404%0A%20%20%20%20wd%3AQ7174%0A%20%20%20%20wd%3AQ40231%0A%20%20%20%20wd%3AQ35749%0A%20%20%7D%0A%20%20%3FmainSubject%20(wd%3AP31%7C(wdt%3AP279*)%7C(wdt%3AP1269*))%20%3Fdemocrazy.%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%7D" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
 
 
