--- a/jahr_2023.md
+++ b/jahr_2023.md
@@ -18,7 +18,7 @@ ORDER BY DESC(?dateModified)
 
 <iframe style="width: 40vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#SELECT%20%3Fartikel%20%3FartikelLabel%20%3FdateModified%20WHERE%20%7B%0A%0A%20%20%3Fartikel%20wdt%3AP1433%20wd%3AQ655617%3B%20schema%3AdateModified%20%3FdateModified.%0A%20%20FILTER(YEAR(%3FdateModified)%3D2023)%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%7D%0AORDER%20BY%20DESC(%3FdateModified)" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
 
-Anmerkung: Die hier (und auch bereits [2022](jahr_2022.html])) verwendete SPARQL-Abfrage verwendet `schema:dateModified` als datumsbezogenen Wert. Das bedeutet, ein Item, dass 2022 und 2023 bearbeitet wurde, schlägt nur mehr in der 2023er-Query auf. Womöglich gibt es bessere Queries (MWAPI:SERVICE?) um die Bearbeitungsgeschichte im SPARQL-Endpoint miteinzubeziehen. Aber näherungsweise und v.a. aktuell zum Jahreswechsel gibt es einen guten Überblick über die Arbeit der *Datenlaube* im vergangen Jahr. 
+Anmerkung: Die hier (und auch bereits [2022](jahr_2022.html)) verwendete SPARQL-Abfrage verwendet `schema:dateModified` als datumsbezogenen Wert. Das bedeutet, ein Item, dass 2022 und 2023 bearbeitet wurde, schlägt nur mehr in der 2023er-Query auf. Womöglich gibt es bessere Queries (MWAPI:SERVICE?) um die Bearbeitungsgeschichte im SPARQL-Endpoint miteinzubeziehen. Aber näherungsweise und v.a. aktuell zum Jahreswechsel gibt es einen guten Überblick über die Arbeit der *Datenlaube* im vergangen Jahr. 
 
 ## Publikationen
 
